<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomeScreen"
    tools:showIn="@layout/app_bar_home_screen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:padding="4dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:rowCount="3">

                <!-- row0 -->
                <!-- Colomn0 -->
                <android.support.v7.widget.CardView
                    android:id="@+id/card_rice"
                    android:layout_width="165dp"
                    android:layout_height="165dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/maize" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:background="#60000000"
                            android:text="@string/hs_txt_rice"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <!-- Colomn1 -->
                <android.support.v7.widget.CardView
                    android:id="@+id/card_cotton"
                    android:layout_width="165dp"
                    android:layout_height="165dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/cotton" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:background="#60000000"
                            android:text="@string/hs_txt_cotton"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <!-- Row 1-->
                <!-- Colomn0 -->
                <android.support.v7.widget.CardView
                    android:id="@+id/card_potato"
                    android:layout_width="165dp"
                    android:layout_height="165dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/potato" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:background="#60000000"
                            android:text="@string/hs_txt_potato"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <!-- Colomn1 -->
                <android.support.v7.widget.CardView
                    android:id="@+id/card_cabbage"
                    android:layout_width="165dp"
                    android:layout_height="165dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/cabbage" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:background="#60000000"
                            android:text="@string/hs_txt_cabbage"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <!-- Row 2-->
                <!-- Colomn0 -->
                <android.support.v7.widget.CardView
                    android:id="@+id/card_maize"
                    android:layout_width="165dp"
                    android:layout_height="165dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/corn" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:background="#60000000"
                            android:text="@string/hs_txt_maize"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </RelativeLayout>
                </android.support.v7.widget.CardView>

                <!-- Colomn1 -->
                <android.support.v7.widget.CardView
                    android:id="@+id/card_wheat"
                    android:layout_width="165dp"
                    android:layout_height="165dp"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="3dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/wheat" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:background="#60000000"
                            android:text="@string/hs_txt_wheat"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </GridLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>